# test-bot----------

./: .gitignore  main.py  pyproject.toml  test_subs.xlsx  users_and_subscriptions_20250618_154250.xlsx  users_and_subscriptions_20250618_154936.xlsx  users_and_subscriptions_20250618_155137.xlsx  users_and_subscriptions_20250618_155916.xlsx  users_and_subscriptions_20250618_160052.xlsx
core/: __init__.py
database/: __init__.py  db_helper.py
database/models/: __init__.py  base.py  subcription.py  user.py  user_subscriptions.py
handlers/: __init__.py  registration_handler.py
handlers/admin/: __init__.py  add_subs.py  amdin_handler.py  edit_subscription_channel.py  edit_subscription_desc.py  edit_subscriptions_name.py  statistics.py
handlers/user_registration/: __init__.py  registration_handler.py
keyboards/: __init__.py  inline_key_boards_users.py  inlinekeyboard_amin.py
keyboards/admin_kb_govern_of_users/: __init__.py  admin_dist_kb_list_users.py  delete_subsc_from_user_kb_admin.py
middleware/: db_middleware.py
services/: __init__.py  admin_subcription.py  delete_subsc_from_user_service_db.py  delete_subscription.py  edit_channel_subsc_admin.py  edit_desc_subs_admin.py  edit_name_admin.py  get_statistics_by_dates.py  get_users_subsc_service.py  hide_subscriptions.py  notifications.py  recover_subscriptions.py  user.py
states/: __init__.py  admin_states_edit_channels.py  admin_states_edit_name.py  admin_states_edit_subs_desc.py  delete_subs_from_user_state.py  distribution.py  give_subsc_to_user.py  states.py  statistics_states.py
(+25 files in other folders)
